k8s-kurs/demo-projekt-v2/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment-v2
  namespace: demo-projekt-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod-v2
  template:
    metadata:
        labels:
            app: mysql-pod-v2
    spec:
      containers:
        - name: mysql-container
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2Gi"
              cpu: "0.5"
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-pvc-v2
