k8s-kurs/demo-projekt-v2/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywordpress-deployment-v2
  namespace: demo-projekt-v2  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mywordpress-pod-v2
  template:
    metadata:
      labels:
        app: mywordpress-pod-v2 
    spec:
      containers:
        - name: mywordpress-container
          image: wordpress:latest
          
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2Gi"
              cpu: "0.5"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mywordpress-volume
              mountPath: /var/www/html
      volumes:
        - name: mywordpress-volume
          persistentVolumeClaim:
            claimName: mywordpress-pvc-v2
        - name: mywordpress-config-volume
          configMap:
            name: wordpress-app-config-v2
