k8s-kurs/demo-projekt-v2/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywordpress-service-v2
  namespace: demo-projekt-v2
spec:
  selector:
    app: mywordpress-pod-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
