k8s-kurs/demo-projekt-v2/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywordpress-ingress-v2
  namespace: demo-projekt-v2
spec:
  rules:
    - host: wordpress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywordpress-service-v2
                port:
                  number: 80
